# rim-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
rim_manager/gui/: __init__.py
